objects/Technology_Partner_Request__c/Technology_Partner_Request__c.object-meta.xml
<CustomObject>
    <label>Technology Partner Request</label>
    <nameField>
        <displayFormat>TPR-{00000}</displayFormat>
        <label>Technology Partner Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technology Partner Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>