objects/Technology_Partner_Request__c/fields/Assigned_Request_Supporter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Request_Supporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Request Supporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technology_Partner_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>