objects/Technology_Partner_Request__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Tanium resource assigned to support this Technology Partner Request</inlineHelpText>
    <label>Assigned Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technology_Partner_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>