objects/Technology_Partner_Request__c/fields/Current_Integration_with_Tech_Partner__c.field-meta.xml
<CustomField>
    <fullName>Current_Integration_with_Tech_Partner__c</fullName>
    <inlineHelpText>How is the customer currently integrated with the technology partner (ServiceNow, Microsoft, etc.)?</inlineHelpText>
    <label>Current Integration with Tech Partner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>