objects/Technology_Partner_Request__c/fields/First_Call_Deck_Already_Presented__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Deck_Already_Presented__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the first call deck been presented?</inlineHelpText>
    <label>First Call Deck Already Presented</label>
    <type>Checkbox</type>
</CustomField>