objects/Technology_Partner_Request__c/fields/Integrations_Evaluating__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Evaluating__c</fullName>
    <label>Integrations Evaluating</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEM Agent for ServiceNow</fullName>
            </value>
            <value>
                <fullName>Asset Push</fullName>
            </value>
            <value>
                <fullName>Service Graph Connector</fullName>
            </value>
            <value>
                <fullName>SDK for ServiceNow</fullName>
            </value>
            <value>
                <fullName>Software Management</fullName>
            </value>
            <value>
                <fullName>Live UI</fullName>
            </value>
            <value>
                <fullName>File Integrity Monitoring</fullName>
            </value>
            <value>
                <fullName>Patch Management for IT Operations</fullName>
            </value>
            <value>
                <fullName>Vulnerability Response</fullName>
            </value>
            <value>
                <fullName>Patch Management for Vulnerability Response</fullName>
            </value>
            <value>
                <fullName>Security Incident Response</fullName>
            </value>
            <value>
                <fullName>Configuration Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>