objects/Technology_Partner_Request__c/fields/Notes_on_Associated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Associated_Opportunity__c</fullName>
    <inlineHelpText>Is there anything else to note about the associated opportunity?</inlineHelpText>
    <label>Notes on Associated Opportunity</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>