objects/Technology_Partner_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technology Partner Requests</relationshipLabel>
    <relationshipName>Technology_Partner_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>