objects/Technology_Partner_Request__c/fields/Owns_ServiceNow__c.field-meta.xml
<CustomField>
    <fullName>Owns_ServiceNow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer own ServiceNow?</inlineHelpText>
    <label>Owns ServiceNow</label>
    <type>Checkbox</type>
</CustomField>