objects/Technology_Partner_Request__c/fields/Presence_Type__c.field-meta.xml
<CustomField>
    <fullName>Presence_Type__c</fullName>
    <label>Presence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>