objects/Technology_Partner_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery Support</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Services Partner Support</fullName>
            </value>
            <value>
                <fullName>Integration Configuration</fullName>
            </value>
            <value>
                <fullName>Technology Partner Engagement</fullName>
            </value>
            <value>
                <fullName>EBR/QBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>