objects/Technology_Partner_Request__c/fields/Services_Partner__c.field-meta.xml
<CustomField>
    <fullName>Services_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the associated services partner (GSI, SI, etc.)</inlineHelpText>
    <label>Services Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technology Partner Requests (Services Partner)</relationshipLabel>
    <relationshipName>Technology_Partner_Request_Service</relationshipName>
    <type>Lookup</type>
</CustomField>