objects/Technology_Partner_Request__c/fields/Services_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Services_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technology Partner Requests (Services Partner Contact)</relationshipLabel>
    <relationshipName>Technology_Partner_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>