objects/Technology_Partner_Request__c/fields/Services_Partner_Involved__c.field-meta.xml
<CustomField>
    <fullName>Services_Partner_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is a services partner (GSI, SI, etc.) participating in this request?</inlineHelpText>
    <label>Services Partner Involved</label>
    <type>Checkbox</type>
</CustomField>