objects/Technology_Partner_Request__c/fields/Services_Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Services_Partner_Relationship__c</fullName>
    <inlineHelpText>What is the relationship with the services partner (GSI, SI, etc.) team?</inlineHelpText>
    <label>Services Partner Relationship</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>