objects/Technology_Partner_Request__c/fields/Strategic_Initiative_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Initiative_for_Request__c</fullName>
    <inlineHelpText>Describe the strategic initiative for this request</inlineHelpText>
    <label>Strategic Initiative for Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>