objects/Technology_Partner_Request__c/fields/Tech_Partner_Participating__c.field-meta.xml
<CustomField>
    <fullName>Tech_Partner_Participating__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the technology partner (ServiceNow, Microsoft, etc.) participating in this request?</inlineHelpText>
    <label>Tech Partner Participating</label>
    <type>Checkbox</type>
</CustomField>