objects/Technology_Partner_Request__c/fields/Tech_Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Tech_Partner_Relationship__c</fullName>
    <inlineHelpText>What is the relationship with the technology partner (ServiceNow, Microsoft, etc.) team?</inlineHelpText>
    <label>Tech Partner Relationship</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>