objects/Technology_Partner_Request__c/fields/Technology_Partner__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the associated technology partner (ServiceNow, Microsoft, etc.)</inlineHelpText>
    <label>Technology Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technology Partner Requests</relationshipLabel>
    <relationshipName>Technology_Partner_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>