objects/Technology_Partner_Request__c/fields/Technology_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technology Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technology Partner Requests (Technology Partner Contact)</relationshipLabel>
    <relationshipName>Technology_Partner_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>