objects/Technology_Partner_Request__c/fields/Technology_Partner_Products_Owned__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner_Products_Owned__c</fullName>
    <label>Technology Partner Products Owned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Now Assist/AI</fullName>
            </value>
            <value>
                <fullName>Hardware Asset Management (HAM)</fullName>
            </value>
            <value>
                <fullName>Software Asset Management (SAM)</fullName>
            </value>
            <value>
                <fullName>IT Operations Management (ITOM)</fullName>
            </value>
            <value>
                <fullName>Vulnerability Response (VR)</fullName>
            </value>
            <value>
                <fullName>Security Incident Response (SIR)</fullName>
            </value>
            <value>
                <fullName>Configuration Compliance (CC)</fullName>
            </value>
            <value>
                <fullName>Integrated Risk Management (IRM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>