objects/Technology_Partner_Request__c/recordTypes/AWS.recordType-meta.xml
<RecordType>
    <fullName>AWS</fullName>
    <active>true</active>
    <label>AWS</label>
</RecordType>