objects/Technology_Partner_Request__c/recordTypes/Microsoft.recordType-meta.xml
<RecordType>
    <fullName>Microsoft</fullName>
    <active>false</active>
    <label>Microsoft</label>
</RecordType>