objects/Technology_Partner_Request__c/recordTypes/ScreenMeet.recordType-meta.xml
<RecordType>
    <fullName>ScreenMeet</fullName>
    <active>false</active>
    <label>ScreenMeet</label>
</RecordType>