objects/Technology_Partner_Request__c/recordTypes/ServiceNow.recordType-meta.xml
<RecordType>
    <fullName>ServiceNow</fullName>
    <active>true</active>
    <label>ServiceNow</label>
</RecordType>