objects/Technology_Partner_Request__c/validationRules/Cannot_select_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_select_Past_Date</fullName>
    <active>true</active>
    <description>Cannot select Past date to Request Date/Time field.</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(Request_Date_Time__c)
  ),
  NOT(ISBLANK(Request_Date_Time__c)),
  Request_Date_Time__c &lt; DATETIMEVALUE(TEXT(NOW())),
  NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorDisplayField>Request_Date_Time__c</errorDisplayField>
    <errorMessage>You cannot select past date.</errorMessage>
</ValidationRule>