objects/Technology_Partner_Request__c/validationRules/ServicesPartnerRequired_IfInvolved.validationRule-meta.xml
<ValidationRule>
    <fullName>ServicesPartnerRequired_IfInvolved</fullName>
    <active>true</active>
    <description>If the “Services Partner Involved” checkbox is TRUE, system should require a value in the “Services Partner” lookup field.</description>
    <errorConditionFormula>AND(
  Services_Partner_Involved__c = TRUE,
  ISBLANK(Services_Partner__c),
  NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorDisplayField>Services_Partner__c</errorDisplayField>
    <errorMessage>Please specify a Services Partner if &apos;Services Partner Involved&apos; is checked.</errorMessage>
</ValidationRule>